[package]
name = "aoc-timeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.23", features = ["serde"] }
itertools = "0.10.5"
reqwest = {version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
